# Computer-Vision---Team-Project

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/custom/: README.md
docs/: _DELETE_team_commit_plan.md
notebooks/: .gitkeep  presentation_demo.ipynb
scripts/: _bootstrap.py  run_eval.py  run_showcase.py
src/lowlight_cv/: __init__.py  config.py
src/lowlight_cv/data/: __init__.py  dataset.py
src/lowlight_cv/decision/: __init__.py  scene.py
src/lowlight_cv/detection/: __init__.py  features.py
src/lowlight_cv/enhancement/: __init__.py  methods.py
src/lowlight_cv/evaluation/: __init__.py  metrics.py
src/lowlight_cv/io/: __init__.py  export.py
src/lowlight_cv/metrics/: __init__.py  enhancement.py
src/lowlight_cv/morphology/: __init__.py  ops.py
src/lowlight_cv/pipeline/: __init__.py  lowlight.py
src/lowlight_cv/reporting/: __init__.py  docs.py
src/lowlight_cv/segmentation/: __init__.py  methods.py
src/lowlight_cv/utils/: __init__.py  viz.py
