[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lowlight-cv"
version = "0.1.0"
description = "Classical CV pipeline: low-light enhancement and object detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "scikit-image>=0.21",
    "gdown>=4.7",
]

[project.optional-dependencies]
dev = ["jupyter", "ipykernel"]

[tool.setuptools.packages.find]
where = ["src"]
